canned

Bug: 740801
Change-Id: I64c21aabb75bdc8cd2926a665fad9ab2bccfe1d9